# vector-agent-modules

./: .andjela-hook  .gitignore  README.md
Game-1/: README.md
Game-1/contracts/: aiken.toml
Game-1/deploy/: DEPLOY.md  deployment.json  plutus.json
Game-1/docs/: implementation-spec.md  simulation-spec.md  single-agent-instructions.md  technical-overview.md
Game-1/simulation/: __init__.py  agent_pool.py  config.py  tx_builder.py
Game-3/: GAME-3-REPUTATION-STAKING-IMPL-SPEC.md
Game-3/reputation-staking/: plutus.json
Game-6/: README.md  shell.nix
Game-6/agents/: analytics_template.py
Game-6/dashboard/: README.md  server.py
Game-6/deploy/: DEPLOY.md
Module-1/: README.md  _preflight_lifecycle_eval.py  _recover_stuck_scenario.py  _verify_happy_path_construction.py  _verify_lifecycle_live.py  _verify_lifecycle_slashnonreveal.py  _verify_lifecycle_withdrawclaim.py  _verify_setup_live.py  _verify_wallet_derivation.py  pyproject.toml
Module-3/: .env.example  AUDIT-REPORT.md  MODULE-3-REPUTATION-STAKING-IMPL-SPEC.md  README.md  shell.nix
Module-3/python/: pyproject.toml
Module-3/python/indexer/: __init__.py  __main__.py  api.py  indexer.py  storage.py  sybil.py
Module-3/python/oracle/: __init__.py  oracle.py
Module-3/python/reputation_staking/: __init__.py  backend.py  client.py  constants.py  cross_module.py  datums.py  docker_backend.py  mcp_tools.py  models.py  ogmios_backend.py  plutus_data.py  scoring.py  token_names.py  utils.py
Module-3/python/tests/: conftest.py  test_api.py  test_cross_module.py  test_datums.py  test_mcp_tools.py  test_plutus_data.py  test_scoring.py  test_sybil.py  test_token_names.py
Module-6/: README.md  shell.nix
Oracle/: README.md  shell.nix
shared/: aiken.toml  plutus.json
(+340 files in other folders)
