[project]
name = "reputation-staking-sdk"
version = "0.3.0"
description = "Python SDK for Vector Module 3: Reputation Staking"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "cbor2>=5.6.0",
    "bech32>=1.2.0",
    "pycardano>=0.19.2",
    "requests>=2.28.0",
]

[project.optional-dependencies]
docker = [
    # No extra deps — docker_backend uses subprocess only
]
indexer = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["reputation_staking*", "indexer*", "oracle*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require a live Vector testnet connection",
]
